--- a/demo.html
+++ b/demo.html
@@ -38,6 +38,12 @@ if (/*@cc_on!@*/false && document.documentMode === 10) {
         		<div class="canvasjs" id="graph3" data-graphtype="column" data-stats="json/dummy-graphdata.json"></div>
         	</div>
 
+          <div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
+            <div class="canvasjs" id="graph4" data-graphtype="IncompleteDonut" data-value="42" data-color="#edc600"></div>
+            <div id="graph4-total" class="IncompleteDonut_value">300</div>
+            <div id="graph4-label" class="IncompleteDonut_label">Candy</div>
+          </div>
+
         </div>
       </div>
 	<script>
