Small fix: added json dummy data for use column chart wihout X-data

--- a/demo.html
+++ b/demo.html
@@ -35,7 +35,7 @@ if (/*@cc_on!@*/false && document.documentMode === 10) {
         	</div>
 
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
-        		<div class="canvasjs" id="graph3" data-graphtype="column" data-stats="json/dummy-graphdata.json"></div>
+        		<div class="canvasjs" id="graph3" data-graphtype="column" data-stats="json/dummy-graphdata-columns.json"></div>
         	</div>
 
           <div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
