Added support for color sets

--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,10 @@ if (/*@cc_on!@*/false && document.documentMode === 10) {
   </head>
   <body>
       <div class="container">
+
+        <input type="hidden" class="canvasjs-colorset" data-colorsetname="default" 
+        data-colorset="#003d59,#ecc500,#d3693b,#a6bbc5,#4c778a,#26a489,#dc825a,#118baf,#419dbe,#62b29d,#333332" />
+
         <div class="row">
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
         		<div class="canvasjs" id="graph1" data-graphtype="doughnut" data-stats="json/dummy-graphdata.json"></div>
@@ -33,6 +37,10 @@ if (/*@cc_on!@*/false && document.documentMode === 10) {
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
         		<div class="canvasjs" id="graph2" data-graphtype="pie" data-stats="json/dummy-graphdata.json"></div>
         	</div>
+
+          <div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
+            <div class="canvasjs" id="graph22" data-graphtype="pie" data-stats="json/dummy-graphdata-muchdata.json"></div>
+          </div>
 
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
         		<div class="canvasjs" id="graph3" data-graphtype="column" data-stats="json/dummy-graphdata-columns.json"></div>
