--- a/demo.html
+++ b/demo.html
@@ -31,19 +31,19 @@ if (/*@cc_on!@*/false && document.documentMode === 10) {
 
         <div class="row">
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
-        		<div class="canvasjs" id="graph1" data-graphtype="doughnut" data-stats="json/dummy-graphdata.json"></div>
+        		<div class="canvasjs" id="graph1" data-graphtype="doughnut" data-stats="json/dummy-graphdata.json" data-title="Lorem ipsum"></div>
         	</div>
 
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
-        		<div class="canvasjs" id="graph2" data-graphtype="pie" data-stats="json/dummy-graphdata.json"></div>
+        		<div class="canvasjs" id="graph2" data-graphtype="pie" data-stats="json/dummy-graphdata.json" data-title="Lorem ipsum"></div>
         	</div>
 
           <div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
-            <div class="canvasjs" id="graph22" data-graphtype="pie" data-stats="json/dummy-graphdata-muchdata.json"></div>
+            <div class="canvasjs" id="graph22" data-graphtype="pie" data-stats="json/dummy-graphdata-muchdata.json" data-title="Lorem ipsum"></div>
           </div>
 
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
-        		<div class="canvasjs" id="graph3" data-graphtype="column" data-stats="json/dummy-graphdata-columns.json"></div>
+        		<div class="canvasjs" id="graph3" data-graphtype="column" data-stats="json/dummy-graphdata-columns.json" data-title="Lorem ipsum"></div>
         	</div>
 
           <div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
