added settings for fontsize and fontfamily

--- a/demo.html
+++ b/demo.html
@@ -26,8 +26,7 @@ if (/*@cc_on!@*/false && document.documentMode === 10) {
   <body>
       <div class="container">
 
-        <input type="hidden" class="canvasjs-colorset" data-colorsetname="default" 
-        data-colorset="#003d59,#ecc500,#d3693b,#a6bbc5,#4c778a,#26a489,#dc825a,#118baf,#419dbe,#62b29d,#333332" />
+        <input type="hidden" class="canvasjs-settings" data-colorsetname="default" data-fontsize="20" data-fontfamily="Arial" data-colorset="#003d59,#ecc500,#d3693b,#a6bbc5,#4c778a,#26a489,#dc825a,#118baf,#419dbe,#62b29d,#333332" />
 
         <div class="row">
         	<div class="col-md-9 col-lg-9 col-xs-12 col-sm-12">
